SERVER-73210 Modify OplogStones atomics under the lock when clearing